--- a/css/index.css
+++ b/css/index.css
@@ -1360,13 +1360,13 @@ line-height: 30px;
     height: 19px;
     font-size: 14px;
 }
-.floor6fore1 i{
+.gt1{
 	position: absolute;
 	top:20px;
 	right: 76px;
 	font-size: 14px;
 }
-.floor6fore2 i{
+.gt2{
 	position: absolute;
 	top:43px;
 	right: 76px;
@@ -1457,9 +1457,6 @@ line-height: 30px;
     border-right: 1px solid #EDEDED;
     border-bottom: 1px solid #EDEDED;
 }
-.floor6slider .slider-panel a.floor6fore1 {
-    border-bottom: 1px dotted #ccc;
-}
 .floor6slider .slider-panel a {
     display: block;
 }
@@ -1468,4 +1465,333 @@ line-height: 30px;
 	width: 1210px;
 	height: 511px;
 	margin-top: 90px;
+}
+/*9f*/
+#banner9f{
+	margin-top: 100px;
+}
+/*10f*/
+#floor6ydjs10{
+	width: 1210px;
+	height: 511px;
+	margin-top: 30px;
+}
+.floor10main {
+    position: relative;
+    float: left;
+    width: 1000px;
+    height: 474px;
+    overflow: hidden;
+    background: #EDEDED;
+}
+.floor10main-body{
+	width: 220px;
+    height: 474px;
+    background: #EDEDED;
+    float: left;
+    display: block;
+}
+.floor10main-body li.floor6fore2, .floor10main-body li.floor6fore4 {
+    padding-left: 340px;
+}
+.floor10main-body li {
+    float: left;
+    height: 237px;
+}
+.floor10main-body .main-inner li {
+    width: 220px;
+    overflow: hidden;
+    font-size: 0;
+}
+.floor10main-body li.floor6fore4 {
+    padding-left: 340px;
+}
+.floor10main-body2{
+	width: 440px;
+    height: 237px;
+    padding-top: 237px;
+    background: #EDEDED;
+    float: left;
+    display: block;
+}
+.floor10main-body2 li {
+    float: left;
+    height: 237px;
+    border-right: 1px solid #EDEDED;
+    background: red;
+}
+/*.floor6main-extra li {
+    height: 237px;
+    width: 220px;
+}
+.floor6main-extra{
+	 overflow: hidden;
+}*/
+.floor10slider {
+    left: 220px;
+    width: 439px;
+    height:236px;
+}
+.floor10slider {
+    position: absolute;
+    top: 0;
+    left: 1;
+    width: 439px;
+    height: 236px;
+    overflow: hidden;
+    border-right: 1px solid #EDEDED;
+    border-bottom: 1px solid #EDEDED;
+}
+
+.floor10slider-body {
+    position: absolute;
+    top: 0;
+    left: 1;
+    width: 338px;
+    height: 473px;
+    overflow: hidden;
+    border-right: 1px solid #EDEDED;
+    border-bottom: 1px solid #EDEDED;
+}
+.floor10slider .slider-panel a {
+    display: block;
+}
+
+#author {
+    position: absolute;
+    left: 660px;
+    top: 0;
+    width: 340px;
+    height: 473px;
+    background: #fff;
+}
+#author .smt {
+    height: 34px;
+    padding-top: 13px;
+    border-right: 1px solid #EDEDED;
+    overflow: hidden;
+}
+#author h3 {
+    margin: 0 15px 0 10px;
+    padding-left: 5px;
+    padding-bottom: 10px;
+    font-size: 20px;
+    line-height: 23px;
+    border-bottom: 1px solid #e4e4e4;
+}
+#author .smc {
+    height: 426px;
+    padding-left: 15px;
+    border-right: 1px solid #EDEDED;
+    border-bottom: 1px solid #EDEDED;
+}
+#author .smc li {
+    height: 80px;
+    margin-top: 20px;
+    overflow: hidden;
+}
+#author .author-info {
+    float: left;
+    width: 48px;
+    padding: 2px 15px 0 4px;
+    text-align: center;
+}
+#author .p-img {
+    float: left;
+    padding-left: 8px;
+    width: 80px;
+    height: 80px;
+    border-left: 1px dotted #dbdbdb;
+}
+#author .p-info {
+    float: left;
+    padding-left: 10px;
+}
+#author .p-name {
+    width: 150px;
+    height: 18px;
+    margin-bottom: 5px;
+    font-size: 14px;
+    font-family: "microsoft yahei";
+}
+#author .p-detail {
+    position: relative;
+    width: 115px;
+    height: 34px;
+    padding: 10px 15px 10px 20px;
+    background: #f8f8f8;
+    color: #999;
+    overflow: visible;
+}
+#author .p-detail p {
+    height: 38px;
+    overflow: hidden;
+    word-break: break-all;
+}
+#author .icon-r {
+    font-size: 38px;
+    line-height: 38px;
+    color: #aaa;
+    vertical-align: -24px;
+    font-family: Arial;
+}
+#author .detail-arrow {
+    position: absolute;
+    left: -9px;
+    top: 19px;
+    color: #f8f8f8;
+    font-size: 20px;
+}
+#author .icon-l {
+    position: absolute;
+    left: 4px;
+    top: 7px;
+    font-size: 38px;
+    line-height: 38px;
+    color: #aaa;
+    font-family: Arial;
+}
+#author .smc li {
+    height: 80px;
+    margin-top: 20px;
+    overflow: hidden;
+}
+#author .author-info {
+    float: left;
+    width: 48px;
+    padding: 2px 15px 0 4px;
+    text-align: center;
+}
+/*11f*/
+#floor6ydjs11{
+	width: 1210px;
+	height: 511px;
+	margin-top: 100px;
+}
+
+.floor11slider {
+    position: absolute;
+    top: 0;
+    left: 1;
+    width: 395px;
+    height: 237px;
+    overflow: hidden;
+    border-right: 1px solid #EDEDED;
+    border-bottom: 1px solid #EDEDED;
+}
+.floor11slider-body {
+    position: absolute;
+    top: 0;
+    left: 1;
+    width: 395px;
+    height: 237px;
+    overflow: hidden;
+    border-right: 1px solid #EDEDED;
+    
+}
+.floor10slider .slider-panel a {
+    display: block;
+}
+.floor10main-body2{
+	width:395px;
+    height: 238px;
+    padding-top: 236px;
+    background: #EDEDED;
+    float: left;
+    display: block;
+}
+.floor10main-body2 li {
+    float: left;
+    height: 117px;
+    width: 196px;
+    border-right: 1px solid #EDEDED;
+    border-bottom: 1px solid #EDEDED;
+}
+.floor11main {
+    position: relative;
+    float: left;
+    width: 395px;
+    height: 474px;
+    /*padding-top: 237px;*/
+    overflow: hidden;
+    background: #EDEDED;
+}
+.special{
+	width:1210px;
+	height:339px;
+	margin:0px auto;
+}
+.specialtoday{
+	width:900px;
+	height:319px;
+	float: left;
+	margin-bottom: 20px;
+
+}
+.specialshare{
+	width:310px;
+	height:319px;
+	float: left;
+
+}
+.specialmt{
+	height: 36px;
+
+	}
+.specialmt h2{
+
+	padding-right: 232px;
+	background: 0 0;
+	float: left;
+	display: inline;
+	line-height: 30px;
+	font-size: 20px;
+	font-family: "microsoft yahei";
+	font-weight: 400;
+}
+/*天天特价*/
+
+.specialmc {
+	width: 899px;
+    height: 281px;
+    border: solid #E5E5E5;
+    border-width: 1px 0 1px 1px;
+}
+.specialmc ul {
+    width: 910px;
+    overflow: hidden;
+}
+.specialmc li {
+    float: left;
+    width: 199px;
+    height: 104px;
+    padding: 18px 10px;
+    border-right: 1px solid #EDEDED;
+    border-bottom: 1px solid #EDEDED;
+    overflow: hidden;
+}
+#specialfore1 {
+    width: 219px;
+    height: 245px;
+}
+#specialfore1 .p-name {
+    height: 18px;
+}
+.specialmc li .p-name {
+    height: 36px;
+    margin-bottom: 6px;
+    color: #666;
+    word-break: break-all;
+}
+#special .specialmc li.fore1 .p-price {
+    float: left;
+}
+#special .specialmc li .p-price {
+    margin-bottom: 5px;
+}
+#special .specialmc li .p-price span {
+    display: block;
+    color: #e12228;
+    font-size: 16px;
+    font-weight: 700;
 }
