--- a/css/index.css
+++ b/css/index.css
@@ -414,10 +414,72 @@ line-height: 30px;
 	background: blue;
 	float: left;
 	margin: 12px 10px 0 10px;
+	position:relative;
+	display:inline;
+	overflow: hidden;
 
 }
-.window_img a{
+.window a{
 	display: block;
+	font-size: 0;
+	position:absolute;
+	left:0px;
+	top:0px;
+}
+.window .btns{
+	width:100%;
+	height:70px;
+	position:absolute;
+	left:0;
+	top:193px;
+	z-index:1100;
+
+}
+.window #btn-left{
+	width:40px;
+	height:70px;
+	float:left;
+	opacity:0.5;
+	cursor:pointer;
+	background-image:url(../image/bqxx/lbnextpre.png);
+}
+.window #btn-right{
+	width:40px;
+	height:70px;
+	float:right;
+	opacity:0.5;
+	background-image:url(../image/bqxx/lbnextpre.png);
+	background-position:right;
+	cursor:pointer;
+}
+.window .tab{
+	width:208px;
+	height:16px;
+	position:absolute;
+	left:250px;
+	top:420px;
+	z-index:7;
+	text-align: center;
+}
+.window .hots{
+	width:16px;
+	height:16px;
+	float:left;
+	margin-right:10px;
+	background:#BBC4D2;
+	border-radius:50%;
+	z-index: 1000;
+
+}
+.window .hotss{
+	width:16px;
+	height:16px;
+	float:left;
+	margin-right:10px;
+	background:red;
+	border-radius:50%;
+	z-index: 1000;
+
 }
 .bannernews{
 	width: 250px;
@@ -1459,17 +1521,114 @@ line-height: 30px;
 .floor6slider .slider-panel a {
     display: block;
 }
+.floor6slider-body .btns6f{
+	width:100%;
+	height:70px;
+	position:absolute;
+	left:0;
+	top:202px;
+	z-index:1100;
+
+}
+.floor6slider-body #btn-left6f{
+	width:40px;
+	height:70px;
+	float:left;
+	opacity:0.5;
+	cursor:pointer;
+	background-image:url(../image/bqxx/lbnextpre.png);
+}
+.floor6slider-body #btn-right6f{
+	width:40px;
+	height:70px;
+	float:right;
+	opacity:0.5;
+	background-image:url(../image/bqxx/lbnextpre.png);
+	background-position:right;
+	cursor:pointer;
+}
 /*7f*/
 #floor6ydjs{
 	width: 1210px;
 	height: 511px;
 	margin-top: 90px;
 }
+.floor6slider-body .btns7f{
+	width:100%;
+	height:70px;
+	position:absolute;
+	left:0;
+	top:203px;
+	z-index:1100;
+
+}
+.floor6slider-body #btn-left7f{
+	width:40px;
+	height:70px;
+	float:left;
+	opacity:0.5;
+	cursor:pointer;
+	background-image:url(../image/bqxx/lbnextpre.png);
+}
+.floor6slider-body #btn-right7f{
+	width:40px;
+	height:70px;
+	float:right;
+	opacity:0.5;
+	background-image:url(../image/bqxx/lbnextpre.png);
+	background-position:right;
+	cursor:pointer;
+}
+/*8f*/
+.floor6slider-body .btns8f{
+	width:100%;
+	height:70px;
+	position:absolute;
+	left:0;
+	top:202px;
+	z-index:1100;
+
+}
 /*9f*/
 #banner9f{
 	margin-top: 100px;
 }
+.floor6slider-body .btns9f{
+	width:100%;
+	height:70px;
+	position:absolute;
+	left:0;
+	top:202px;
+	z-index:1100;
+
+}
 /*10f*/
+.floor10slider-body .btns10f{
+	width:100%;
+	height:70px;
+	position:absolute;
+	left:0;
+	top:90px;
+	z-index:1100;
+
+}
+.floor10slider-body #btn-left7f{
+	width:40px;
+	height:70px;
+	float:left;
+	opacity:0.5;
+	cursor:pointer;
+	background-image:url(../image/bqxx/lbnextpre.png);
+}
+.floor10slider-body #btn-right7f{
+	width:40px;
+	height:70px;
+	float:right;
+	opacity:0.5;
+	background-image:url(../image/bqxx/lbnextpre.png);
+	background-position:right;
+	cursor:pointer;
+}
 #floor6ydjs10{
 	width: 1210px;
 	height: 511px;
@@ -1545,7 +1704,7 @@ line-height: 30px;
     position: absolute;
     top: 0;
     left: 1;
-    width: 338px;
+    width: 439px;
     height: 473px;
     overflow: hidden;
     border-right: 1px solid #EDEDED;
@@ -1990,7 +2149,7 @@ em, i, u {
     margin: 0 5px;
     text-decoration: none;
 }
-img {
+#footer-2014 img {
     border: 0;
     vertical-align: middle;
 }
@@ -1998,7 +2157,7 @@ img {
     width: 1210px;
 }
  #service-2014 dl {
-    width: 199px;
+    width: 180px;
     float: left;
 }
 #service-2014 .w dt {
@@ -2024,4 +2183,56 @@ img {
 }
 .ar {
     text-align: right;
+}
+/*版权信息*/
+.bqxx {
+    width: 1210px;
+    height: 195px;
+    margin: 20px auto;
+}
+.bqxxw {
+    width: 1210px;
+    height: 195px;
+    border-top: 1px solid #E5E5E5;
+    padding: 20px 0 30px;
+    text-align: center;
+}
+.gywm {
+    text-align: center;
+    width: 1210px;
+    height: 18px;
+    float: left;
+}
+.gywm a {
+    margin: 0 10px;
+    color: #666;
+    text-align: center;
+    font-size: 12px;
+    line-height: 150%;
+    font-family: Arial, Verdana, 宋体;
+}
+.copyright {
+    margin: 35px 0;
+    text-align: center;
+    width: 1210px;
+    height: 74px;
+    color: #666;
+    font-size: 12px;
+    line-height: 150%;
+    font-family: Arial, Verdana, 宋体;
+}
+.copyright a {
+    color: #666;
+    text-align: center;
+    font-size: 12px;
+    line-height: 150%;
+    font-family: Arial, Verdana, 宋体;
+}
+.authentication {
+    text-align: center;
+    margin-top: 150px;
+}
+.authentication a {
+    margin: 0 5px;
+    text-align: center;
 }
